chore: localize on dark mode toggle

--- a/src/presentation/components/nav-bar/nav-bar.component.html
+++ b/src/presentation/components/nav-bar/nav-bar.component.html
@@ -38,7 +38,7 @@
             (click)="setDarkMode('light')"
           >
             <hlm-menu-item-check />
-            Light
+            สว่าง
           </button>
           <button
             hlmMenuItemCheckbox
@@ -46,7 +46,7 @@
             (click)="setDarkMode('dark')"
           >
             <hlm-menu-item-check />
-            Dark
+            มืด
           </button>
           <button
             hlmMenuItemCheckbox
@@ -54,7 +54,7 @@
             (click)="setDarkMode('system')"
           >
             <hlm-menu-item-check />
-            System
+            ระบบปฏิบัติการ
           </button>
         </hlm-menu>
       </ng-template>
