chore: localize on อัปเดต

--- a/src/presentation/pages/home/home.component.html
+++ b/src/presentation/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl mt-5">
-  <h1>นิยายอัปเดทล่าสุด</h1>
+  <h1>นิยายอัปเดตล่าสุด</h1>
   <brn-separator hlmSeparator class="mt-2 mb-4" />
 
   <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
